feat:添加删除接口

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -92,7 +92,8 @@ archives:
     files:
       - README.md
       - LICENSE*
-      - configs/*.yaml
+      - configs/**/*
+      - data/**/*
     # Format overrides for Windows
     format_overrides:
       - goos: windows
